# fantastical-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  build_mcpb.sh  env.example  pyproject.toml
.github/workflows/: publish.yml
docs/: configuration.md  development.md  how-it-works.md  tools.md
docs/plans/: 2026-03-30-tier2-tools-design.md
docs/superpowers/plans/: 2026-06-08-get-events-in-range.md
docs/superpowers/specs/: 2026-06-06-get-events-in-range-tool-design.md
mcpb/: manifest.json
mcpb/server/: stub.py
src/fantastical_mcp/: __init__.py  db.py  formatters.py  json_encoders.py  recurrence.py  server.py  url_scheme.py
tests/: test_db.py  test_formatters.py  test_json_encoders.py  test_recurrence.py  test_server_range.py  test_url_scheme.py
tests/integration/: test_live.py
